apps/oxlint/src/snapshots/fixtures__tsgolint_type_error_--type-aware --type-check@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --type-aware --type-check
working directory: fixtures/tsgolint_type_error
----------

  x typescript(TS2322): Type 'string' is not assignable to type 'number'.
   ,-[index.ts:1:7]
 1 | const foo: number = "42";
   :       ^^^
   `----

Found 0 warnings and 1 error.

Errors  Files
     1  index.ts:1

Finished in <variable>ms on 2 files with 2 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
